--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
   "dependencies": {
+    "@types/dat.gui": "^0.7.7",
+    "dat.gui": "^0.7.9",
     "express": "^4.18.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "three-gltf-loader": "^1.111.0",
+    "three-orbit-controls": "^82.1.0",
+    "three-orbitcontrols": "^2.110.3",
     "three.js": "^0.77.0",
     "webpack": "^5.73.0",
     "ws": "^8.8.0"
