--- a/package.json
+++ b/package.json
@@ -3,13 +3,26 @@
     "@types/dat.gui": "^0.7.7",
     "dat.gui": "^0.7.9",
     "express": "^4.18.1",
+    "jshint": "^2.13.5",
+    "json_to_lua": "^1.1.1",
+    "linq": "^4.0.0",
+    "linq-to-js": "^1.0.3",
+    "linqts": "^1.14.4",
+    "lua-json": "^1.0.0",
+    "lua2json": "^1.1.2",
+    "luaparse": "^0.3.1",
+    "nedb": "^1.8.0",
+    "pem": "^1.14.6",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "serve-favicon": "^2.5.0",
+    "three-css2drender": "^1.0.0",
     "three-gltf-loader": "^1.111.0",
     "three-orbit-controls": "^82.1.0",
     "three-orbitcontrols": "^2.110.3",
+    "three.interaction": "^0.2.3",
     "three.js": "^0.77.0",
-    "webpack": "^5.73.0",
+    "url-parse": "^1.5.10",
     "ws": "^8.8.0"
   },
   "devDependencies": {
@@ -18,6 +31,8 @@
     "@types/react": "^18.0.12",
     "@types/react-dom": "^18.0.5",
     "@types/ws": "^8.5.3",
-    "typescript": "^4.7.3"
+    "typescript": "^4.7.3",
+    "webpack": "^5.73.0",
+    "webpack-cli": "^4.10.0"
   }
 }
